--- a/.github/workflows/run1.yml
+++ b/.github/workflows/run1.yml
@@ -1,4 +1,4 @@
-name: Generate RULE-SET for Premium Edition of Clash
+name: RULE-SET for Premium Edition of Clash
 on:
   workflow_dispatch:
   schedule:
